[package]
name = "htmos-boot-info"
version = "0.9.0" # version will change to 1.0 when I call it stable and ready.
edition = "2015"
authors = ["JJ"]
license = "MIT OR Apache-2.0"
description = "The Boot Information required when booting into HTMOS"
repository = "https://github.com/JJtheJJpro/htmos-boot-info"
readme = "README.md"
